--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Application de recherche de films"
     />
-    <title>React App</title>
+    <title>App Movies with React</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
